# oai-cn5g-fed

./: CHANGELOG.md  README.md  github_webhook.sh  script.sh  testing
component/oai-nef/src/api-server/: CMakeLists.txt  README.md  nef-api-server.cpp  nef-api-server.h  nef-http2-server.cpp  nef-http2-server.h
component/oai-nef/src/api-server/api/: ACSConfigurationSubscriptionsApi.cpp  ACSConfigurationSubscriptionsApi.h  AFLevelUELocationUpdateNotificationOperationApi.cpp  AFLevelUELocationUpdateNotificationOperationApi.h  AnalyticsExposureAPIFetchAnalyticsInformationApi.cpp  AnalyticsExposureAPIFetchAnalyticsInformationApi.h  AnalyticsExposureSubscriptionsApi.cpp  AnalyticsExposureSubscriptionsApi.h  AppliedBDTPolicySubscriptionApi.cpp  AppliedBDTPolicySubscriptionApi.h  Class5GLANParametersProvisionSubscriptionsApi.cpp  Class5GLANParametersProvisionSubscriptionsApi.h  DefaultApi.cpp  DefaultApi.h  IPTVConfigurationsApi.cpp  IPTVConfigurationsApi.h  Individual5GLANParametersProvisionSubscriptionApi.cpp  Individual5GLANParametersProvisionSubscriptionApi.h  IndividualACSConfigurationSubscriptionApi.cpp  IndividualACSConfigurationSubscriptionApi.h  IndividualAnalyticsExposureSubscriptionApi.cpp  IndividualAnalyticsExposureSubscriptionApi.h  IndividualAppliedBDTPolicySubscriptionApi.cpp  IndividualAppliedBDTPolicySubscriptionApi.h  IndividualIPTVConfigurationApi.cpp  IndividualIPTVConfigurationApi.h  IndividualLPIParametersProvisioningApi.cpp  IndividualLPIParametersProvisioningApi.h  IndividualMonitoringEventSubscriptionApi.cpp  IndividualMonitoringEventSubscriptionApi.h  IndividualSMContextDocumentApi.cpp  IndividualSMContextDocumentApi.h  IndividualServiceParameterSubscriptionApi.cpp  IndividualServiceParameterSubscriptionApi.h  IndividualSubscriptionDocumentApi.cpp  IndividualSubscriptionDocumentApi.h  IndividualTrafficInfluenceSubscriptionApi.cpp  IndividualTrafficInfluenceSubscriptionApi.h  LPIParametersProvisioningsApi.cpp  LPIParametersProvisioningsApi.h  (+12 more)
component/oai-nef/src/api-server/impl/: ACSConfigurationSubscriptionsApiImpl.cpp  ACSConfigurationSubscriptionsApiImpl.h  AFLevelUELocationUpdateNotificationOperationApiImpl.cpp  AFLevelUELocationUpdateNotificationOperationApiImpl.h  AnalyticsExposureAPIFetchAnalyticsInformationApiImpl.cpp  AnalyticsExposureAPIFetchAnalyticsInformationApiImpl.h  AnalyticsExposureSubscriptionsApiImpl.cpp  AnalyticsExposureSubscriptionsApiImpl.h  AppliedBDTPolicySubscriptionApiImpl.cpp  AppliedBDTPolicySubscriptionApiImpl.h  Class5GLANParametersProvisionSubscriptionsApiImpl.cpp  Class5GLANParametersProvisionSubscriptionsApiImpl.h  DefaultApiImpl.cpp  DefaultApiImpl.h  IPTVConfigurationsApiImpl.cpp  IPTVConfigurationsApiImpl.h  Individual5GLANParametersProvisionSubscriptionApiImpl.cpp  Individual5GLANParametersProvisionSubscriptionApiImpl.h  IndividualACSConfigurationSubscriptionApiImpl.cpp  IndividualACSConfigurationSubscriptionApiImpl.h  IndividualAnalyticsExposureSubscriptionApiImpl.cpp  IndividualAnalyticsExposureSubscriptionApiImpl.h  IndividualAppliedBDTPolicySubscriptionApiImpl.cpp  IndividualAppliedBDTPolicySubscriptionApiImpl.h  IndividualIPTVConfigurationApiImpl.cpp  IndividualIPTVConfigurationApiImpl.h  IndividualLPIParametersProvisioningApiImpl.cpp  IndividualLPIParametersProvisioningApiImpl.h  IndividualMonitoringEventSubscriptionApiImpl.cpp  IndividualMonitoringEventSubscriptionApiImpl.h  IndividualSMContextDocumentApiImpl.cpp  IndividualSMContextDocumentApiImpl.h  IndividualServiceParameterSubscriptionApiImpl.cpp  IndividualServiceParameterSubscriptionApiImpl.h  IndividualSubscriptionDocumentApiImpl.cpp  IndividualSubscriptionDocumentApiImpl.h  IndividualTrafficInfluenceSubscriptionApiImpl.cpp  IndividualTrafficInfluenceSubscriptionApiImpl.h  LPIParametersProvisioningsApiImpl.cpp  LPIParametersProvisioningsApiImpl.h  (+12 more)
component/oai-nef/src/api-server/model/: 5GLanParameters.cpp  5GLanParameters.h  5GLanParametersPatch.cpp  5GLanParametersPatch.h  5GLanParametersProvision.cpp  5GLanParametersProvision.h  5GLanParametersProvisionPatch.cpp  (+629 more)
component/oai-pcf/src/pcf_app/: CMakeLists.txt  logger.hpp  pcf_app.cpp  pcf_app.hpp  pcf_client.cpp  pcf_client.hpp  pcf_config.cpp  pcf_config.hpp  pcf_event.cpp  pcf_event.hpp  pcf_event_sig.hpp  pcf_nrf.cpp  pcf_nrf.hpp  pcf_profile.cpp  pcf_profile.hpp  pcf_sm_policy_control.cpp  pcf_sm_policy_control.hpp  task_manager.cpp  task_manager.hpp
(+1601 files in other folders)
